# basicenum

./: .gitignore  LICENSE  README.md  benchmark_results.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_class.py  bench_compat.py  bench_import.py  bench_member.py
src/basicenum/: __init__.py  compat.py
tests/: test_compat.py
