[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "basicenum"
version = "2023.0"
authors = [{name = "Brett Cannon", email = "brett@python.org"}]
description = "Simplified enums"
readme = "README.md"
keywords = ["enum"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: BSD License"]

[project.urls]
Repository = "https://github.com/brettcannon/basicenum"

[project.optional-dependencies]
test = ["pytest"]
benchmark = ["richbench"]
