[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "basicenum"
version = "2023.0"
authors = [{name = "Brett Cannon", email = "brett@python.org"}]
description = "Simplified enums"
readme = "README.md"
keywords = ["enum"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: BSD License"]

[project.urls]
Repository = "https://github.com/brettcannon/basicenum"

[project.optional-dependencies]
test = ["pytest"]
benchmark = ["richbench"]
